drag'n'drop ordering for products - closes #3

--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -1,6 +1,6 @@
 test:
   adapter:  postgresql
-  database: kms_shop_test
+  database: kms_catalog_test
   username: postgres
   password: hs,fgbkf
   host: localhost
