--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+
+spec/internal/config/database.yml
+spec/internal/log/*.log
+spec/internal/tmp/
+spec/internal/.sass-cache
+
 *.swp
 *.swo
 *~
 Gemfile.lock
+.byebug_history
