add blank slate screens

--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -1,7 +1,7 @@
 test:
   adapter:  postgresql
-  database: kms_catalog_test
+  database: kms_test
   username: postgres
-  password: hs,fgbkf
+  password:
+  encoding: utf-8
   host: localhost
-  encoding: utf8
